kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classplus-wl-preprod-service
  labels:
    app: classplus-wl-preprod
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple/Users/sonumalik/Classplus/eks/ingress-wl.yaml targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: classplus-wl-preprod
  ports:
    - port: 8080
      targetPort: 8080
